--- a/responsive/html5/css/style.css
+++ b/responsive/html5/css/style.css
@@ -1,5 +1,7 @@
 /* 레이아웃 세팅 */
 #header { width: 100%; background: url(../img/header_bg.jpg) repeat-x center top; }
+#nav { background-color: #f6fdff; }
+#title { background-color: #eaf7fd; }
 
 /* 컨테이너 */
 .container { width: 1200px; margin: 0 auto; /*background: rgba(0,0,0,0.3);*/ }
@@ -65,6 +67,33 @@
     opacity: 1;
 }
 
+/* nav 전체메뉴 */
+.nav { overflow: hidden; padding: 25px 0; }
+.nav > div { float: left; width: 40%; }
+.nav > div:last-child { width: 20%; }
+.nav > div ol { overflow: hidden; }
+.nav > div li { float: left; width: 50%; position: relative; padding-left: 8px; box-sizing: border-box; }
+.nav > div:last-child li { width: 100%; }
+.nav > div li:before { content:''; width: 3px; height: 3px; background: #25a2d0; border-radius: 50%;
+                        position: absolute; top: 6px; left: 0; }
+.nav > div h3 { font-size: 18px; color: #25a2d0; margin-bottom: 4px; font-weight: bold; }
+.nav > div li a { position: relative; }
+.nav > div li a:after { display: inline-block; content: ''; width: 0; height: 1px;
+                      position: absolute; bottom:0; left:0;
+                      background: #25aad0; transition: all 0.2s ease-in-out; }
+.nav > div li:hover a:after { width: 100%; }
+
+/* title */
+.title { text-align: center; position: relative; }
+.title h2 { font-family: 'Nanum Brush Script', cursive; font-size: 39px; color: #0093bd; padding:5px 0; }
+.title .btn { position: absolute; top: 5px; right: 0; width: 60px; height: 60px; line-height: 60px;
+              background: #3192bf; color: #fff; font-size: 35px; border-radius: 50%; 
+              transition: all 0.3s ease; }
+.title .btn:hover {
+    box-shadow: 
+        inset 0 0 0 3px rgba(71, 154, 191, 0.9),
+        inset 0 0 0 100px rgba(0, 0, 0, 0.1);
+}
 
 /* mediaquery */
 @media (max-width : 1220px ) {
