--- a/responsive/html5/css/reset.css
+++ b/responsive/html5/css/reset.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 
 /* 여백 초기화 */
-body, div, ul, li, dl, dt, ol, h1, h2, h3, h4, h5, h6, input, fieldset, legend, p, select, table, th, td, tr, textarea, button, form {margin: 0; padding: 0;}
+body, div, ul, li, dl, dd, dt, ol, h1, h2, h3, h4, h5, h6, input, fieldset, legend, p, select, table, th, td, tr, textarea, button, form, figure, figcaption {margin: 0; padding: 0;}
 
 /* a 링크 초기화 */
 a {color: #222; text-decoration: none;}
@@ -20,6 +20,9 @@ dl, ul, li, ol, menu {list-style: none;}
 /* 제목 태그 초기화 */
 h1, h2, h3, h4, h5, h6 {font-size: 13px; color:#222; font-weight: normal;}
 
+/* 반응형 이미지 */
+img,video { width: 100%; }
+
 /* 테두리 초기화 */
 img, fieldset {border: 0 none;}
 
@@ -33,6 +36,15 @@ button {border: 0;}
 .ir_wa {display: block; overflow: hidden; position: relative; z-index: -1; width: 100%; height: 100%;} 
 /* 대체 텍스트가 아닌 접근성을 위한 숨김 텍스트를 제공할 때 */
 .ir_su {overflow: hidden; position: absolute; width: 0; height: 0; line-height: 0; text-indent: -9999px;}
+
+/* clearfix */
+/* 
+    float사용시 상위태그에 overflow: hidden을 줘야하는데 사용하지 못할경우 사용함 
+    제일 안전적임
+*/
+.clearfix{ *zoom: 1; }
+.clearfix::before, .clearfix::after { display: block; content: ''; line-height: 0; }
+.clearfix::after { clear:both; }
 
 /* margin, padding */
 .mt10 {margin-top: 10px !important;}
